--- a/index.html
+++ b/index.html
@@ -8,7 +8,16 @@
 </head>
 <body>
 
-  <!-- Your code here -->
+ <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" />
+ <img
+ src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+ alt="The mighty lion yawns a mighty yawn"
+ />
+ <img
+ src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+ alt="Lions spend most of the day sleeping"
+ title="Tired boi"
+ />
 
 </body>
 </html>
